--- a/20180704.md
+++ b/20180704.md
@@ -5,4 +5,4 @@
 ### 3.使用DISM++備份全系統，再將其還原。(注意：勿將備份檔案置入目標磁碟，否則檔案將遺失。)
 ### 4.灌入Ubuntu作業系統。
 ##### - 必須切割出兩倍記憶體的空間給掛載硬碟，選擇邏輯分割區、置換空間。
-##### - 系統磁碟選擇Ext4，主分割區、掛載點選擇\。
+##### - 系統磁碟選擇Ext4，主分割區、掛載點選擇\。<http://google.com.tw>
