--- a/20180704.md
+++ b/20180704.md
@@ -2,7 +2,7 @@
 ### 1.安裝Windows及Linux雙系統。
 ### 2.將ESP8266安裝micropython韌體，~~利用PuTTY查詢MAC位址，並貼標。~~
 ##### - 首先至micropython網頁下載最新韌體，並且安裝Flash下載工具，將韌體下載入ESP8266中，之後使用PuTTY查詢其MAC位置。選擇Serial、COM_(此數字依照裝置管理員而定)、Speed輸入115200。
-### 3.使用DISM++備份全系統，再將其還原。(**注意**：勿將備份檔案置入目標磁碟，否則檔案將遺失。)
+### 3.使用DISM++備份全系統，再將其還原。(__注意__：勿將備份檔案置入目標磁碟，否則檔案將遺失。)
 ### 4.灌入Ubuntu作業系統。
 ##### - 必須切割出兩倍記憶體的空間給掛載硬碟，選擇邏輯分割區、置換空間。
 ##### - 系統磁碟選擇Ext4，主分割區、掛載點選擇\。<http://google.com.tw>
