--- a/20180703.md
+++ b/20180703.md
@@ -3,4 +3,4 @@
 ### 2.完成7-Zip、Notepad++、WinSCP、Classic Shell、Everything、mRemoteNG、PuTTY、Chrome、Firefox、PicPick、DISM++、Github Desktop安裝。
 ### 3.完成Classic Shell、Everything、mRemoteNG、PuTTY、Chrome、PicPick教育截圖。
 ### 4.製作Win10安裝碟(使用rufus-3.1程式)。
-### 5.安裝新硬碟(SSD)至電腦中。
+### 5.安裝新硬碟(SSD)。
