--- a/20180705.md
+++ b/20180705.md
@@ -1,5 +1,5 @@
 # 20180705
 ### 1.學習markdown語法。
 ### 2.協助處理QC部門林經理office問題處理：啟用office。
-### 3.重灌品管部門，連結印表機電腦。
+### 3.重灌品管部門連結印表機電腦。
 ### 4.與任老師第一次meeting。
